--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,10 @@ a {
 }
 
 .btn-yellow:hover {
-    background-color: var(--action-yellow-dark); 
+    background-color: var(--primary-blue);
     color: var(--bg-light);
-    box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 12px rgba(0, 53, 128, 0.2);
+    transform: translateY(-1px);
 }
 
 .btn-yellow:active {
@@ -91,7 +92,7 @@ a {
     width: 95%;
     max-width: 450px;
     max-height: 90vh;
-    background: white;
+    background: var(--bg-light);
     z-index: 3000;
     border-radius: var(--radius-lg);
     display: none; 
@@ -155,7 +156,7 @@ input[type="file"]::file-selector-button {
 
 input[type="file"]::file-selector-button:hover {
     background-color: var(--primary-blue);
-    color: white;
+    color: var(--bg-light);
     box-shadow: 0 4px 10px rgba(0, 53, 128, 0.2);
 }
 
@@ -214,6 +215,11 @@ input[type="file"]::file-selector-button:hover {
 
 .light-search:focus-within {
     box-shadow: 0 0 0 2px #f3b000;
+}
+
+.btn-search:hover {
+    background-color: var(--action-yellow-dark); 
+    box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
 }
 
 .light-search > input {
@@ -359,7 +365,7 @@ input[type="file"]::file-selector-button:hover {
 
 .add-cart:hover {
     background-color: var(--primary-blue);
-    color: white;
+    color: var(--bg-light);
     box-shadow: 0 4px 12px rgba(0, 53, 128, 0.2);
     transform: translateY(-1px);
 }
@@ -370,9 +376,38 @@ input[type="file"]::file-selector-button:hover {
 
 .add-cart.added {
     background-color: var(--primary-blue);
-    color: white;
+    color: var(--bg-light);
     cursor: default;
     box-shadow: 0 4px 12px rgba(0, 53, 128, 0.2);
+}
+
+.global-header {
+    padding: 1.5rem;
+    background: var(--primary-blue);
+    color: var(--bg-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Close Btn */
+.btn-close {
+    background: none;
+    border: none;
+    color: var(--bg-light);
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.btn-close:hover {
+    color: var(--action-yellow);
+    transform: rotate(90deg);
+    transition: all 0.3s ease;
+}
+
+.buy {
+    padding: 1rem;
+    border-radius: var(--radius-md);
 }
 
 @media (min-width: 768px) {
@@ -393,7 +428,7 @@ input[type="file"]::file-selector-button:hover {
     }
     
     .grid-three-col { 
-        grid-template-columns: repeat(2, 1fr); 
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
