--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,7 @@ a {
 /* Buttons */
 .btn-yellow {
     background-color: var(--action-yellow);
-    padding: 0 15px;
-    height: 100%;
-    cursor: pointer;
+    padding: 15px;
     font-weight: 700;
     display: flex;
     align-items: center;
@@ -111,6 +109,15 @@ a {
     overflow-y: auto;
     padding: 1.5rem;
     flex-grow: 1;
+}
+
+.global-header {
+    padding: 1.5rem;
+    background: var(--primary-blue);
+    color: var(--bg-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* Form */
@@ -381,15 +388,6 @@ input[type="file"]::file-selector-button:hover {
     box-shadow: 0 4px 12px rgba(0, 53, 128, 0.2);
 }
 
-.global-header {
-    padding: 1.5rem;
-    background: var(--primary-blue);
-    color: var(--bg-light);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 /* Close Btn */
 .btn-close {
     background: none;
@@ -405,9 +403,48 @@ input[type="file"]::file-selector-button:hover {
     transition: all 0.3s ease;
 }
 
+.cart-items {
+    flex-grow: 1;
+    padding: 1.5rem;
+    overflow-y: auto;
+}
+
+.cart-footer {
+    padding: 1.5rem;
+    border-top: 1px solid #eee;
+}
+
 .buy {
-    padding: 1rem;
+    width: 100%;
     border-radius: var(--radius-md);
+    font-weight: 700;
+    margin-top: 1rem;
+}
+
+/* Carrinho Lateral */
+.side-cart {
+    position: fixed;
+    top: 0;
+    right: -400px;
+    width: 350px;
+    height: 100%;
+    background: white;
+    z-index: 2000;
+    box-shadow: -5px 0 15px rgba(0,0,0,0.1);
+    transition: right 0.3s ease;
+    display: flex;
+    flex-direction: column;
+}
+
+.side-cart.open { right: 0; }
+
+.cart-header {
+    padding: 1.5rem;
+    background: var(--primary-blue);
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 @media (min-width: 768px) {
