--- a/css/styles.css
+++ b/css/styles.css
@@ -270,12 +270,6 @@ input[type="file"]::file-selector-button:hover {
     color: var(--text-dark);
 }
 
-.grid-three-col {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1.5rem;
-}
-
 .btns {
     display: flex;
     justify-content: flex-end;
@@ -293,6 +287,7 @@ input[type="file"]::file-selector-button:hover {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1.5rem;
+    margin: 0 auto;
 }
 
 .btns {
@@ -326,11 +321,10 @@ input[type="file"]::file-selector-button:hover {
 }
 
 .img-wrapper {
-    max-height: 300px;
     width: 100%;
     aspect-ratio: 1 / 1;
     overflow: hidden;
-    background-color: #fff;
+    background-color: rgba(0, 53, 128, 0.03);
     border-bottom: 1px solid #f0f0f0;
 }
 
