--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -321,19 +321,25 @@ input[type="file"]::file-selector-button:hover {
 }
 
 .img-wrapper {
-    width: 100%;
     aspect-ratio: 1 / 1;
+    max-height: 300px;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
     background-color: rgba(0, 53, 128, 0.03);
     border-bottom: 1px solid #f0f0f0;
 }
 
 .rounded-card > .img-wrapper > img {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: contain; 
     object-position: center; 
     transition: transform 0.5s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 .rounded-card:hover > .img-wrapper > img {
