--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -225,20 +225,25 @@ input[type="file"]::file-selector-button:hover {
     transition: all 0.2s ease;
 }
 
-.navbar .cart-icon {
-    font-size: 1.3rem;
-    color: var(--bg-light);
-}
-
-.navbar .cart-icon:hover {
-    color: var(--action-yellow);
+.navbar .right-icon:hover {
     transform: translateY(-2px);
     transition: all 0.2s ease;
 }
 
-.navbar .cart-icon > span {
-    font-size: 1rem;
-    font-weight: 500;
+.navbar .right-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar .right-icon > img {
+    width: 40px;
+    height: 40px;
+    transition: var(--transition);
+}
+
+.navbar .right-icon:hover > img {
+    filter: drop-shadow(0 0 3px var(--action-yellow));
 }
 
 .light-search {
